--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <p>
   <%= first %>
 </p>
-<% posts.forEach(function(letter){ %> <!--used instead of for loop for easier implementation -->
+<% posts.forEach(function(letter){ %> 
    <h1><%= letter.Title %></h1>
    <p>
      <%= letter.Post.substring(0, 100) %> ...
